# knowde

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  complete.bash  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml  pypi-upload.yml  standalone.yml
knowde/: __init__.py  api.py  cli.py  conftest.py  test_x.py
knowde/_feature/: __init__.py
knowde/_feature/_shared/: __init__.py  domain.py  endpoint.py  timeutil.py  types.py
knowde/_feature/concept/: __init__.py  api.py  cli.py  domain.py  error.py
knowde/_feature/location/: __init__.py  domain.py  dto.py  interface.py  service.py
knowde/_feature/person/: domain.py  dto.py  errors.py  label.py  test_domain.py
knowde/_feature/proposition/: __init__.py  domain.py  dto.py  interface.py
knowde/_feature/reference/: __init__.py  api.py  cli.py  domain.py  dto.py  interface.py  label.py
knowde/_feature/sentence/: __init__.py  api.py  domain.py  interface.py  label.py
knowde/_feature/term/: __init__.py  domain.py  label.py
knowde/_feature/timeline/: __init__.py  service.py
knowde/api/: __init__.py  api.py  test_api.py
knowde/api/middleware/: __init__.py  transaction.py  user_tracking.py
knowde/cli/: __init__.py  test_sync.py  view.py
knowde/cli/auth/: __init__.py  proc.py
knowde/cli/namespace/: proc.py
knowde/cli/util/: test_to_click.py  to_click.py
knowde/cli/view/: __init__.py  proc.py
knowde/complex/: __init__.py  system.py  test_by_prase2net.py  test_duplicate.py  test_resolve_term.py  test_sysdiff.py  test_systats.py
knowde/complex/__core__/: __init__.py
knowde/complex/auth/: __init__.py  errors.py  manager.py  oauth.py  repo.py  routers.py  schema.py  sso.py
knowde/complex/deduction/: domain.py  interface.py
knowde/complex/definition/: __init__.py  dto.py  interface.py  service.py
knowde/complex/entry/: __init__.py  label.py  mapper.py  router.py
knowde/complex/event/: interface.py
knowde/complex/nxdb/: __init__.py  restore.py  router.py  save.py  test_crud.py
knowde/complex/person/: dto.py  interface.py
knowde/complex/ranking/: __init__.py  node_index.py
knowde/complex/resource/: __init__.py  label.py  router.py
knowde/complex/staging/: __init__.py  test_staging.py
knowde/complex/sysdiff/: __init__.py  test_sysdiff.py
knowde/complex/systats/: __init__.py  nw1_n1.py  syscontext.py  test_nw1_n1.py  test_systats.py  types.py
knowde/complex/system/: __init__.py
knowde/complex/tree2net/: test_ranking.py  test_resolve_term.py  test_staging.py  test_sysdiff.py  test_tree2net.py  transformer.py
knowde/config/: __init__.py  env.py
knowde/core/: __init__.py  timeutil.py
knowde/core/api/: __init__.py  api_param.py  check_response.py  const.py  endpoint.py  facade.py  paramfunc.py  test_api_param.py  test_endpoint.py  types.py
knowde/core/cli/: test_to_click.py  to_click.py
knowde/core/domain/: container.py  domain.py
knowde/core/dupchk/: __init__.py  test_dupchk.py
knowde/core/errors/: __init__.py  domain.py  errors.py  test_errors.py
knowde/core/label_repo/: base.py  label.py  rel.py  rel_label.py  util.py  value_util.py
knowde/core/nxutil/: __init__.py  types.py
knowde/core/repo/: __init__.py  query.py  rel.py  rel_label.py  util.py
knowde/core/typeutil/: __init__.py  func.py  operate.py  test_func.py
knowde/feature/: __init__.py  api.py  cli.py  view.py  view_proc.py
knowde/feature/__core__/: __init__.py  cliutil.py  config.py
knowde/feature/_shared/: __init__.py  endpoint.py  timeutil.py
knowde/feature/api/: __init__.py  middle.py
knowde/feature/apikey/: __init__.py  domain.py
knowde/feature/auth/: __init__.py  api.py  cli.py  db.py  domain.py  helper.py  manager.py  oauth.py  repo.py  routers.py  schema.py  sso.py  users.py
knowde/feature/cli/: __init__.py  completion.py  help_all.py  test_sync.py
knowde/feature/concept/: __init__.py  api.py  cli.py  domain.py  error.py  label.py  repo.py  test_repo.py
knowde/feature/deduction/: __init__.py  domain.py  dto.py  interface.py
knowde/feature/definition/: __init__.py  domain.py  dto.py  interface.py  service.py  test_domain.py
knowde/feature/entry/: __init__.py  domain.py  errors.py  label.py  mapper.py  router.py
knowde/feature/event/: __init__.py  dto.py  interface.py
knowde/feature/knowde/: __init__.py  cypher.py  repo.py  router.py  test_repo.py  test_router.py
knowde/feature/parser/: __init__.py  interface.py  test_cli.py  test_term_visitor.py
knowde/feature/parsing/: __init__.py  domain.py  usecase.py
knowde/feature/person/: __init__.py  domain.py  dto.py  interface.py  test_domain.py
knowde/feature/proposition/: domain.py
knowde/feature/reference/: __init__.py  domain.py  interface.py
knowde/feature/resource/: __init__.py  proc.py
knowde/feature/space_time/: __init__.py
knowde/feature/stats/: __init__.py
knowde/feature/user/: __init__.py  backend.py  db.py  domain.py  errors.py  manager.py  routers.py  schema.py
knowde/feature/view/: __init__.py  proc.py
knowde/feature/webhook/: __init__.py  routers.py  test_routers.py
knowde/integration/: __init__.py
knowde/integration/quiz/: __init__.py  errors.py  fixture.py  label.py
knowde/integration/user_achivement/: cypher.py  domain.py  repo.py  test_repo.py
knowde/integration/user_archivement/: domain.py  label.py  repo.py  test_repo.py
knowde/integration/user_score/: __init__.py  domain.py  repo.py  test_repo.py
knowde/primitive/: __init__.py
knowde/primitive/__core__/: __init__.py  neoutil.py  timeutil.py  types.py  util.py
knowde/primitive/account/: __init__.py  repo.py
knowde/primitive/config/: __init__.py  env.py  test_fs.py
knowde/primitive/file_io/: __init__.py  test_io.py
knowde/primitive/fs/: __init__.py  test_fs.py
knowde/primitive/heading/: __init__.py  test_heading.py
knowde/primitive/location/: __init__.py  domain.py  dto.py  interface.py  (+1 more)
knowde/reference/: domain.py  dto.py  interface.py
knowde/shared/: __init__.py  cypher.py  debug.py  neoutil.py  user.py  util.py
knowde/tmp/: __init__.py
(+1038 files in other folders)
