[tool.poetry]
name = "knowde"
version = "0.0.0" # poetry-dynamic-versioningでgit tagの値にに置換される
description = ""
authors = ["Shogo Goto <gotoadmn0605@gmail.com>"]
readme = "README.md"
repository = "https://github/com/shogogoto/knowde"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
neomodel = "^5.2.0"
uvicorn = "^0.24.0.post1"
uuid6 = "^2023.5.2"
requests = "^2.31.0"
click = "^8.1.7"
tabulate = "^0.9.0"
makefun = "^1.15.2"
inflector = "^3.1.0"
networkx = "^3.2.1"
pydantic-partial = "^0.5.4"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
requests-mock = "^1.11.0"
pytest-watch = "^4.2.0"
ruff = "^0.1.5"
httpx = "^0.25.2"
pytest-unordered = "^0.5.2"
ruff-lsp = "^0.0.48"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["knowde/cli.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.taskipy.tasks]
test       = "pytest -s -v"
test-watch = "pytest-watch -- -v -s --durations=0 --ff"
lint       = "ruff check ."
lintfix    = "ruff . --fix"
pre-commit = "pre-commit install"
serve      = "uvicorn knowde:api --reload --host 0.0.0.0 --port 8000"

[tool.ruff]
select = ["ALL"]
ignore = [
  "ERA001", # found commented-out code
  "ANN101", # missing self type hint
  "ANN102", # missing cls type hint
  "S101", # use assert
  "N805", # first argument of method should be named self
  "UP007", # str | Optional[T]が許されない
  "B008", # default argに関数の返り値を使えない
  ]
unsafe-fixes = true

# ref: https://github.com/scikit-build/scikit-build/issues/951#issuecomment-1645302094
[tool.pytest.ini_options]
filterwarnings = [
  'ignore: pkg_resources is deprecated as an API:DeprecationWarning',
  "ignore: Relying on Driver's destructor to close the session is deprecated."
  ]

[tool.poetry.scripts]
kn = "knowde:cli"
